[package]
authors = ["lordpipe <lordpipe@protonmail.com>", "Douglas Dwyer <dougmdwyer@hotmail.com>", "Alexandre Bury <alexandre.bury@gmail.com>"]
description = "Binding for the zstd compression library, with the ability to reuse compression contexts."
documentation = "https://docs.rs/zstd-reusectx"
keywords = ["zstd", "zstandard", "compression"]
categories = ["compression", "api-bindings"]
license = "MIT"
name = "zstd-reusectx"
repository = "https://github.com/lordofpipes/zstd-rs"
version = "0.14.0"
exclude = ["assets/*.zst", "/.github"]
readme = "Readme.md"
edition = "2018"
rust-version = "1.64"

[package.metadata.docs.rs]
features = ["experimental", "zstdmt", "zdict_builder", "doc-cfg"]

[dependencies]
zstd-safe = { path = "zstd-safe", version = "7.0.0", default-features = false, features = ["std"] }

[dev-dependencies]
clap = {version = "4.0", features=["derive"]}
humansize = "2.0"
partial-io = "0.5"
walkdir = "2.2"

[features]
default = ["legacy", "arrays", "zdict_builder"]

bindgen = ["zstd-safe/bindgen"]
debug = ["zstd-safe/debug"]
legacy = ["zstd-safe/legacy"]
pkg-config = ["zstd-safe/pkg-config"]
wasm = []
zstdmt = ["zstd-safe/zstdmt"]
experimental = ["zstd-safe/experimental"]
thin = ["zstd-safe/thin"]
arrays = ["zstd-safe/arrays"]
no_asm = ["zstd-safe/no_asm"]
doc-cfg = []
zdict_builder = ["zstd-safe/zdict_builder"]

# These two are for cross-language LTO.
# Will only work if `clang` is used to build the C library.
fat-lto = ["zstd-safe/fat-lto"]
thin-lto = ["zstd-safe/thin-lto"]

[lib]
name = "zstd"

[[example]]
name = "train"
required-features = ["zdict_builder"]
